# tiny-py

./: .gitignore  README.md  pyproject.toml
.claude/commands/: tiny.md
docs/: README.md  _sidebar.md  client.md  exceptions.md  index.html  installation.md  quickstart.md  rate-limiting.md  roadmap.md  skill.md
docs/guides/: async.md  fastapi.md  rabbitmq.md
docs/models/: order.md  product.md
docs/resources/: orders.md  products.md
tests/: test_client.py  test_exceptions.py  test_http.py  test_models.py  test_rate_limiter.py  test_resources.py
tiny_py/: __init__.py  _async_http.py  _client.py  _http.py  _rate_limiter.py  exceptions.py
tiny_py/models/: __init__.py  order.py  product.py
tiny_py/resources/: __init__.py  _async_base.py  _base.py  async_orders.py  async_products.py  orders.py  products.py
