[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-py"
version = "0.1.0"
description = "Production-grade Python SDK for the Tiny ERP API v2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpserver>=1.0",
    "respx>=0.20",
    "responses>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["tiny_py"]
