[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-erp-py"
version = "0.1.1"
description = "Production-grade Python SDK for the Tiny ERP API v2"
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Joaoaalves" },
]
keywords = ["tiny", "erp", "api", "sdk", "tiny-erp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpserver>=1.0",
    "respx>=0.20",
    "responses>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["tiny_py"]
